test/modules/use/topLevel/noUseTop.good
noUseTop.chpl:8: In function 'main':
noUseTop.chpl:9: error: 'MMM' undeclared (first use this function)
