test/modules/use/topLevel/noUseTop.chpl
module MMM {
  proc foo() {
    writeln("In foo");
  }
}

module NNN {
  proc main() {
    MMM.foo();
  }
}
